2001-03-03  Bruno Haible  <haible@clisp.cons.org>

	* ltconfig:
	sed -e 's/reload object files/produce relocatable object files/'.

	Better support for DOS/Windows platforms.
	* configure.in: Call AC_OBJEXT and AC_EXEEXT.

2001-03-06  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Call bh_C_SIGNED.

2001-02-27  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Replace no@nynorsk with nn.

2001-02-10  Bruno Haible  <haible@clisp.cons.org>

	* configure.in (ALL_LINGUAS): Add ja.

2001-02-04  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (SUBDIRS): Move intl before lib, because lib needs
	libintl.h if the included libintl is used.

2001-01-21  Bruno Haible  <haible@clisp.cons.org>

	Use libtool.
	* configure.in: Add argument 'use-libtool' to AM_GNU_GETTEXT call.

2001-01-20  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Add a third argument to AC_DEFINE.
	Require autoconf-2.13.
	* acconfig.h (_GNU_SOURCE): Remove, now done in configure.in.
	(HAVE_PARSE_PRINTF_FORMAT): Likewise.
	(ENABLE_NLS): Remove, now done in m4/gettext.m4.
	(HAVE_GETTEXT): Likewise.
	(HAVE_STPCPY): Likewise.
	(HAVE_LC_MESSAGES): Remove, now done in m4/lcmessage.m4.
	(HAVE_PTRDIFF_T): Remove, now done in automake-1.4's ptrdiff.m4.
	(HAVE_OBSTACK): Remove, not set by configure.
	(HAVE_CATGETS): Likewise.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (DISTCLEANFILES): Remove. Now done in intl/Makefile.in.
	* configure.in: Stop creating intl/intlh.inst from intl/intlh.inst.in.
	Now done through a simple file copy.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	* configure.in: Use AC_CHECK_HEADERS instead of AC_HAVE_HEADERS.
	Call gt_SETLOCALE.

2000-12-30  Bruno Haible  <haible@clisp.cons.org>

	* ltconfig, ltmain.sh: Update from libtool-1.3.5.
	* config.guess, config.sub: Update to GNU version 2000-11-10.
	* missing: Update from gmp-3.1.1.
	* install-sh: Update from fileutils-4.0.32.
