@@ -3,6 +3,7 @@ AC_PREREQ(2.13)
 AC_REVISION($Revision$)
 AC_INIT(src/msgfmt.c)
 AM_INIT_AUTOMAKE(gettext, 0.10.36)
+RELEASE_DATE=2001-03-09      dnl in "date +%Y-%m-%d" format
 AM_CONFIG_HEADER(config.h)
 
 dnl Set of available languages.
@@ -90,6 +91,12 @@ AC_SUBST(aclocaldir)
 dnl Generate the version information file in the intl/ directory.
 test -d intl || mkdir intl
 echo "GNU gettext library from $PACKAGE-$VERSION" > intl/VERSION
+cat > intl/ChangeLog.inst <<EOF
+$RELEASE_DATE  GNU  <bug-gnu-utils@gnu.org>
+
+	* Version $VERSION released.
+
+EOF
 
 AC_OUTPUT([Makefile lib/Makefile intl/Makefile src/Makefile \
            po/Makefile.in doc/Makefile tests/Makefile m4/Makefile \
