@@ -1,3 +1,8 @@
+2001-03-09  Bruno Haible  <haible@clisp.cons.org>
+
+	* configure.in (RELEASE_DATE): New variable.
+	Create intl/ChangeLog.inst.
+
 2001-03-03  Bruno Haible  <haible@clisp.cons.org>
 
 	* ltconfig:
